FEAT: ajout de la fonctionnalité refreshtoken pour mieux gérer les connexions/déconnexion
